...
  }
  
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text("Trex Bank", style: TextStyle(color: Colors.white),),
        centerTitle: true,
        backgroundColor: Color.fromRGBO(2, 165, 165, 1),
        iconTheme: IconThemeData(color: Colors.white),
      ),
      body: BlocBuilder<TransactionCubit, TransactionState>(
          builder: (context, state) {
...
              return Center(child: CircularProgressIndicator(),);
            } else if (state is TransactionError) {
              return Center(child: Text(state.message),);
            } else if (state is TransactionLoaded) {
              final List<TransactionModel> transactions = state.transactions;
              if (transactions.isEmpty) {
                return Center(child: Text("There is no any transaction."),);
              } else {
                return Padding(
                  padding: EdgeInsets.all(15.r),
                  child: ListView.builder(
                    itemCount: transactions.length,
                      itemBuilder: (context, index) {
...
