...
      if (token != null) await saveToken(token);
      return UserResponseModel.fromJson(response.data);
    } on DioException catch (e) {
      final message = _extractMessage(e);
      throw message;
    } catch (e) {
      throw "Error: $e";
    }
  }

  Future<UserResponseModel?> login(String email, String password) async {
    try {
      final response = await dio.post("/auth/login", data: {
...
