...
                                      Text("${account.balance} TL", style: TextStyle(fontSize: 25.sp, fontWeight: FontWeight.bold),),
                                      // Account Transactions button
                                      Align(
                                        alignment: Alignment.bottomRight,
                                        child: TextButton(onPressed: (){
                                          context.push("/transaction/${account.id}");
                                        }, child: Text("Account Transactions ➔", style: TextStyle(color: Color.fromRGBO(2, 165, 165, 1),),)),
                                      ),
                                    ],
                                  ),
                                ),
                              ),
                            );
...
                    style: TextButton.styleFrom(
                      alignment: Alignment.centerLeft,
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.zero,
                      ),
                    ),
                    child: Text("Settings", style: TextStyle(color: Color.fromRGBO(2, 165, 165, 1),),),
                  )
              ),
            ],
          ),
        ),
      ),
...
