...
      body: SingleChildScrollView(
        child: Padding(
          padding: EdgeInsets.all(15.r),
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              Text("Accounts", style: TextStyle(fontWeight: FontWeight.bold, fontSize: 25.sp),),
              SizedBox(height: 30.h,),
              BlocBuilder<BankAccountsCubit, BankAccountState>(
                  builder: (context, state) {
                    if (state is BankAccountLoading) {
                      return Center(child: CircularProgressIndicator(),);
                    } else if (state is BankAccountError) {
...
