...
                        SizedBox(height: 50.h,),
                        //Log Out Button
                        TextButton(onPressed: () async {
                          final prefs = await SharedPreferences.getInstance();
                          await prefs.remove("token");
                          context.go("/login");
                        }, child: Text("Log Out")),
                      ],
                    ),
                  ),
                ),
              );
            } else {
...
